Updating and fixing initial BERT models

--- a/classifier/preprocessing/parse_datasets.ipynb
+++ b/classifier/preprocessing/parse_datasets.ipynb
@@ -9,31 +9,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from enum import Enum\n",
     "import os\n",
     "import xml.etree.ElementTree as ET\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The below code fetches the datasets, extracts the xml for each author, and returns two Python dictionaries:\n",
-    "* author_tweets - maps each authors id to a list of their tweets.\n",
-    "* author_truths - maps each authors id to a truth value 0 or 1."
+    "import pandas as pd\n",
+    "from dataclasses import dataclass\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def __parse_author_tweets(xml_filepaths):\n",
+    "@dataclass\n",
+    "class Tweet:\n",
+    "    \"\"\" Class to hold the contents of a Tweet \"\"\"\n",
+    "    username: str\n",
+    "    text: str\n",
+    "    id: str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _parse_author_tweets(xml_filepaths):\n",
     "    \"\"\"Returns a dictionary of authors to a list of their tweets\"\"\"\n",
     "    author_tweets = {}\n",
     "    for filepath in xml_filepaths:\n",
@@ -48,7 +57,7 @@
     "    \n",
     "    return author_tweets\n",
     "\n",
-    "def __parse_author_truths(truth_filepath):\n",
+    "def _parse_author_truths(truth_filepath):\n",
     "    \"\"\"Returns a dictionary of authors to their truth values 1/0\"\"\"\n",
     "    author_truths = {}\n",
     "    with open(truth_filepath, 'r') as fp:\n",
@@ -60,41 +69,81 @@
     "    \n",
     "    return author_truths\n",
     "\n",
-    "def __filter_files(datasets_path, files, file_type):\n",
+    "def _filter_files(datasets_path, files, file_type):\n",
     "    filtered = filter(lambda f: f.endswith(file_type), files)\n",
     "    return list(map(lambda f: os.path.join(datasets_path, f), filtered))\n",
     "\n",
-    "def parse_datasets_language(datasets_path, language):\n",
+    "def parse_dataset(datasets_path, language, to_pandas=False):\n",
     "    \"\"\"\n",
     "    Keyword arguments:\n",
     "    datasets_path -- path to the datasets directory\n",
     "    language -- the language dataset to use, either \"en\" or \"es\"\n",
     "    \n",
-    "    Returns pandas DataFrame, where each row contains an author id, truth value, and tweets 1 to 100.\n",
+    "    If to_pandas=True then returns pandas DataFrame, where each row contains an author id, truth value, and tweets 1 to 100.\n",
+    "    Else returns an array of tweet feeds\n",
     "    \"\"\"\n",
     "    language_path = os.path.join(datasets_path, language)\n",
     "    \n",
     "    # Get each file in the directory and filter by .xml and .txt extensions.\n",
     "    files = os.listdir(language_path)\n",
-    "    xml_filepaths = __filter_files(language_path, files, \".xml\")\n",
-    "    truth_filepath = __filter_files(language_path, files, \".txt\")[0]\n",
+    "    xml_filepaths = _filter_files(language_path, files, \".xml\")\n",
+    "    truth_filepath = _filter_files(language_path, files, \".txt\")[0]\n",
     "    \n",
     "    # Parse the files.\n",
-    "    author_tweets = __parse_author_tweets(xml_filepaths)\n",
-    "    author_truths = __parse_author_truths(truth_filepath)\n",
+    "    author_tweets = _parse_author_tweets(xml_filepaths)\n",
+    "    author_truths = _parse_author_truths(truth_filepath)\n",
     "    \n",
-    "    # Convert to a pandas DataFrame\n",
-    "    data = []\n",
-    "    for key, value in author_tweets.items():\n",
-    "        d = {}\n",
-    "        d[\"author_id\"] = key\n",
-    "        d[\"truth_value\"] = author_truths[key]\n",
-    "        for i, tweet in enumerate(value, start=1):\n",
-    "            d[\"tweet_\"+str(i)] = tweet\n",
-    "        \n",
-    "        data.append(d)\n",
-    "    \n",
-    "    return pd.DataFrame(data)"
+    "    if to_pandas:\n",
+    "        # Convert to a pandas DataFrame\n",
+    "        data = []\n",
+    "        for key, value in author_tweets.items():\n",
+    "            d = {}\n",
+    "            d[\"author_id\"] = key\n",
+    "            d[\"truth_value\"] = author_truths[key]\n",
+    "            for i, tweet in enumerate(value, start=1):\n",
+    "                d[\"tweet_\"+str(i)] = tweet\n",
+    "\n",
+    "            data.append(d)\n",
+    "\n",
+    "        return pd.DataFrame(data)\n",
+    "    else:\n",
+    "        # Convert to Tweet data objects\n",
+    "        tweet_data = []\n",
+    "        label_data = []\n",
+    "        for author_id, tweet_feed in author_tweets.items():\n",
+    "            tweet_data.append([Tweet(author_id, tweet, i) for i, tweet in enumerate(tweet_feed, start=1)])\n",
+    "            label_data.append(author_truths[author_id])\n",
+    "            \n",
+    "        return np.asarray(tweet_data), np.asarray(label_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Encoding(Enum):\n",
+    "    individual = 0\n",
+    "    feed = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split_dataset(tweet_data, label_data, test_size=0.15, val_size=0.15):\n",
+    "    \"\"\" Takes a tweet feed dataset \"\"\"\n",
+    "    tweet_train, tweet_other, label_train, label_other = train_test_split(\n",
+    "        tweet_data, label_data, test_size=(test_size + val_size)\n",
+    "    )\n",
+    "    tweet_val, tweet_test, label_val, label_test = train_test_split(\n",
+    "        tweet_other, label_other, test_size=(test_size / (test_size + val_size))\n",
+    "    )\n",
+    "\n",
+    "    return (tweet_train, label_train, tweet_val, label_val, tweet_test, label_test)"
    ]
   }
  ],
