Finished dataset investigation

--- a/classifier/preprocessing/preprocessing.ipynb
+++ b/classifier/preprocessing/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,32 +11,100 @@
     "import re\n",
     "import string\n",
     "from xml.sax.saxutils import unescape\n",
-    "\n",
     "import demoji\n",
     "import numpy as np\n",
     "from bs4 import BeautifulSoup\n",
-    "from unidecode import unidecode"
+    "from unidecode import unidecode\n",
+    "from nltk.corpus import stopwords"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tag_indicators(tweet):\n",
+    "    \"\"\" Replace URLs, hastags and user mentions with a tag (e.g. #HASHTAG#) \"\"\"\n",
+    "    hashtags_tagged = re.sub(r\"#[^\\s]*\", \"#HASHTAG#\", tweet, flags=re.MULTILINE)\n",
+    "    urls_tagged = re.sub(\n",
+    "        r\"https?\\:\\/\\/[^\\s]*\", \"#URL#\", hashtags_tagged, flags=re.MULTILINE\n",
+    "    )\n",
+    "    users_tagged = re.sub(r\"@[^\\s]*\", \"#USER#\", urls_tagged, flags=re.MULTILINE)\n",
+    "    return users_tagged\n",
+    "\n",
+    "def replace_xml_and_html(tweet):\n",
+    "    \"\"\" Replace XML encodings (&amp; &lt; &gt;) and HTML tags (<br>) \"\"\"\n",
+    "    replace_xml = unescape(tweet)\n",
+    "    replace_html = BeautifulSoup(replace_xml, features=\"lxml\").get_text()\n",
+    "    return replace_html\n",
+    "\n",
+    "def remove_punctuation(tweet):\n",
+    "    \"\"\" Remove punctuation, except hashtags '#' \"\"\"\n",
+    "    punc = set(string.punctuation)\n",
+    "    prin = set(string.printable)\n",
+    "    punc.remove(\"#\")\n",
+    "    return \"\".join(c for c in tweet if c not in punc and c in prin)\n",
+    "\n",
+    "def replace_emojis(tweet):\n",
+    "    \"\"\" Replace emojis with their meaning ':smiling_face:' \"\"\"\n",
+    "    return demoji.replace_with_desc(tweet, \":\")\n",
+    "\n",
+    "def replace_tags(tweet):\n",
+    "    \"\"\" Replace #HASHTAG# and #URL# #USER# with tags [tag] and [url], [user] \"\"\"\n",
+    "    tweet = tweet.replace(\"#HASHTAG#\", \"[hashtag]\")\n",
+    "    tweet = tweet.replace(\"#URL#\", \"[url]\")\n",
+    "    tweet = tweet.replace(\"#USER#\", \"[user]\")\n",
+    "    tweet = tweet.replace(\"RT\", \"[retweet]\")\n",
+    "    return tweet\n",
+    "\n",
+    "def remove_hashtag_chars(tweet):\n",
+    "    \"\"\" Remove hashtags '#' \"\"\"\n",
+    "    return \"\".join(c for c in tweet if c != \"#\")\n",
+    "\n",
+    "def replace_accented_chars(tweet):\n",
+    "    \"\"\" Replace accented characters with their ASCII equivalent \"\"\"\n",
+    "    return unidecode(tweet)\n",
+    "\n",
+    "def tag_numbers(tweet):\n",
+    "    \"\"\" Replace sequences of digits with 'number' \"\"\"\n",
+    "    return re.sub(\"[0-9]+\", \"number\", tweet)\n",
+    "\n",
+    "def remove_stopwords(tweet):\n",
+    "    \"\"\" Remove english stopwords \"\"\"\n",
+    "    tweet_words = list(\n",
+    "        filter(\n",
+    "            lambda word: word.lower() not in stopwords.words('english'), tweet.split(\" \")\n",
+    "        )\n",
+    "    )\n",
+    "    return \" \".join(tweet_words)\n",
+    "\n",
+    "def remove_extra_spacing(tweet):\n",
+    "    \"\"\" Remove extra spaces \"\"\"\n",
+    "    return \" \".join(tweet.split())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "class TweetPreprocessor:\n",
     "    def __init__(self, preprocess_funcs=None):\n",
-    "        \"\"\" Constructs a new TweetPreprocessor object, given a list of tweets. \"\"\"        \n",
+    "        \"\"\" Constructs a new TweetPreprocessor object, given a list of tweets. \"\"\"\n",
     "        if preprocess_funcs is None:\n",
     "            self.preprocess_funcs = [\n",
-    "                self.tag_indicators,\n",
-    "                self.replace_xml_and_html,\n",
-    "                self.replace_emojis,\n",
-    "                self.remove_punctuation,\n",
-    "                self.replace_tags,\n",
-    "                self.remove_hashtag_chars,\n",
-    "                self.replace_accented_chars,\n",
-    "                self.remove_extra_spacing,\n",
+    "                tag_indicators,\n",
+    "                replace_xml_and_html,\n",
+    "                replace_emojis,\n",
+    "                remove_punctuation,\n",
+    "                replace_tags,\n",
+    "                remove_hashtag_chars,\n",
+    "                replace_accented_chars,\n",
+    "                tag_numbers,\n",
+    "                remove_stopwords,\n",
+    "                remove_extra_spacing,\n",
     "            ]\n",
     "        else:\n",
     "            self.preprocess_funcs = preprocess_funcs\n",
@@ -53,52 +121,6 @@
     "            tweet = f(tweet)\n",
     "\n",
     "        return tweet\n",
-    "    \n",
-    "    # tag urls, hashtags, user mentions\n",
-    "    def tag_indicators(self, tweet):\n",
-    "        \"\"\" Replace URLs, hastags and user mentions with a tag (e.g. #HASHTAG#) \"\"\"\n",
-    "        hashtags_tagged = re.sub(r\"#[^\\s]*\", \"#HASHTAG#\", tweet, flags=re.MULTILINE)\n",
-    "        urls_tagged = re.sub(\n",
-    "            r\"https?\\:\\/\\/[^\\s]*\", \"#URL#\", hashtags_tagged, flags=re.MULTILINE\n",
-    "        )\n",
-    "        users_tagged = re.sub(r\"@[^\\s]*\", \"#USER#\", urls_tagged, flags=re.MULTILINE)\n",
-    "        return users_tagged\n",
-    "\n",
-    "    def replace_xml_and_html(self, tweet):\n",
-    "        \"\"\" Replace XML encodings (&amp; &lt; &gt;) and HTML tags (<br>) \"\"\"\n",
-    "        replace_xml = unescape(tweet)\n",
-    "        replace_html = BeautifulSoup(replace_xml, features=\"lxml\").get_text()\n",
-    "        return replace_html\n",
-    "\n",
-    "    def remove_punctuation(self, tweet):\n",
-    "        \"\"\" Remove punctuation, except hashtags '#' \"\"\"\n",
-    "        punc = set(string.punctuation)\n",
-    "        prin = set(string.printable)\n",
-    "        punc.remove(\"#\")\n",
-    "        return \"\".join(c for c in tweet if c not in punc and c in prin)\n",
-    "\n",
-    "    def replace_emojis(self, tweet):\n",
-    "        \"\"\" Replace emojis with their meaning ':smiling_face:' \"\"\"\n",
-    "        return demoji.replace_with_desc(tweet, \":\")\n",
-    "\n",
-    "    def replace_tags(self, tweet):\n",
-    "        \"\"\" Replace #HASHTAG# and #URL# #USER# with tags [tag] and [url], [user] \"\"\"\n",
-    "        tweet = tweet.replace(\"#HASHTAG#\", \"[tag]\")\n",
-    "        tweet = tweet.replace(\"#URL#\", \"[url]\")\n",
-    "        tweet = tweet.replace(\"#USER#\", \"[user]\")\n",
-    "        return tweet\n",
-    "\n",
-    "    def remove_hashtag_chars(self, tweet):\n",
-    "        \"\"\" Remove hashtags '#' \"\"\"\n",
-    "        return \"\".join(c for c in tweet if c != \"#\")\n",
-    "\n",
-    "    def replace_accented_chars(self, tweet):\n",
-    "        \"\"\" Replace accented characters with their ASCII equivalent \"\"\"\n",
-    "        return unidecode(tweet)\n",
-    "\n",
-    "    def remove_extra_spacing(self, tweet):\n",
-    "        \"\"\" Remove extra spaces \"\"\"\n",
-    "        return \" \".join(tweet.split())\n",
     "\n",
     "    def get_individual_tweets_dataset(self):\n",
     "        \"\"\" Returns an array of preprocessed individual tweets \"\"\"\n",
