--- a/classifier/ensemble_model.ipynb
+++ b/classifier/ensemble_model.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,13 +139,31 @@
     "    )\n",
     "\n",
     "\n",
+    "def cased_chars(user_tweets, cased):\n",
+    "    return [\n",
+    "        sum([c.isupper() if cased else c.islower() for c in tweet.text]) \n",
+    "        for tweet in user_tweets\n",
+    "    ]\n",
+    "\n",
+    "\n",
+    "def emoji_chars(user_tweets):\n",
+    "    return [len(demoji.findall_list(tweet.text)) for tweet in user_tweets]\n",
+    "\n",
+    "\n",
+    "def punctuation_chars(user_tweets):\n",
+    "    return [\n",
+    "        len([c for c in tweet.text if c in punctuation]) \n",
+    "        for tweet in user_tweets\n",
+    "    ]\n",
+    "\n",
+    "\n",
     "def array(data_func):\n",
     "    return lambda args: np.asarray([data_func(args)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,47 +210,49 @@
     "    ], axis=0)\n",
     "\n",
     "\n",
-    "def average_cased_char(user_tweets):\n",
+    "def average_cased_chars(user_tweets):\n",
     "    \"\"\" Returns the average number of cased (uppercase) characters per tweet, for the user \"\"\"\n",
+    "    return np.mean(cased_chars(user_tweets, True))\n",
+    "    \n",
+    "\n",
+    "def std_dev_cased_chars(user_tweets):\n",
+    "    \"\"\" Returns the standard deviation of cased characters per tweet, for the user \"\"\"\n",
+    "    return std_dev(cased_chars(user_tweets, True), average_cased_chars(user_tweets))\n",
     "    \n",
     "    \n",
-    "def average_uncased_char(user_tweets):\n",
+    "def average_uncased_chars(user_tweets):\n",
     "    \"\"\" Returns the average number of uncased (lowercase) characters per tweet, for the user \"\"\"\n",
+    "    return np.mean(cased_chars(user_tweets, False))\n",
     "\n",
-    "    \n",
-    "def std_dev_cased_char(user_tweets):\n",
+    "\n",
+    "def std_dev_uncased_chars(user_tweets):\n",
     "    \"\"\" Returns the standard deviation of cased characters per tweet, for the user \"\"\"\n",
+    "    return std_dev(cased_chars(user_tweets, False), average_uncased_chars(user_tweets))\n",
     "\n",
-    "\n",
-    "def std_dev_uncased_char(user_tweets):\n",
-    "    \"\"\" Returns the standard deviation of cased characters per tweet, for the user \"\"\"\n",
-    "    \n",
     "    \n",
     "def average_emojis(user_tweets):\n",
     "    \"\"\" Returns the average number of emojis per tweet, for the user \"\"\"\n",
-    "\n",
+    "    return np.mean(emoji_chars(user_tweets))\n",
     "    \n",
-    "def average_emojis(user_tweets):\n",
+    "    \n",
+    "def std_dev_emojis(user_tweets):\n",
     "    \"\"\" Returns the standard deviation of emojis per tweet, for the user \"\"\"\n",
-    "    \n",
+    "    return std_dev(emoji_chars(user_tweets), average_emojis(user_tweets))\n",
     "\n",
-    "def average_emojis(user_tweets):\n",
+    "\n",
+    "def average_punctuation_chars(user_tweets):\n",
     "    \"\"\" Returns the average number of punctuation characters per tweet, for the user \"\"\"\n",
+    "    return np.mean(punctuation_chars(user_tweets))\n",
     "\n",
     "    \n",
     "def average_emojis(user_tweets):\n",
     "    \"\"\" Returns the standard deviation of punctuation characters emojis per tweet, for the user \"\"\"\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "# char casing used\n",
-    "# emojis used\n",
-    "# punctuation used"
+    "    return std_dev(punctuation_chars(user_tweets), average_punctuation_chars(user_tweets))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,6 +263,14 @@
     "        array(average_words),\n",
     "        array(std_dev_words),\n",
     "        array(average_word_lengths),\n",
+    "        array(average_cased_chars),\n",
+    "        array(std_dev_cased_chars),\n",
+    "        array(average_uncased_chars),\n",
+    "        array(std_dev_uncased_chars),\n",
+    "        array(average_emojis),\n",
+    "        array(std_dev_emojis),\n",
+    "        array(average_punctuation_chars),\n",
+    "        array(average_emojis),\n",
     "        average_tags,\n",
     "        average_sentiment,\n",
     "    ]):\n",
@@ -269,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,17 +323,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Val accuracy (LogisticRegression): 0.4222222222222222\n",
-      "Val accuracy (SVC): 0.4222222222222222\n",
-      "Val accuracy (RandomForestClassifier): 0.7777777777777778\n",
-      "Val accuracy (GradientBoostingClassifier): 0.7111111111111111\n"
+      "Val accuracy (LogisticRegression): 0.5777777777777777\n",
+      "Val accuracy (SVC): 0.5111111111111111\n",
+      "Val accuracy (RandomForestClassifier): 0.6666666666666666\n",
+      "Val accuracy (GradientBoostingClassifier): 0.6222222222222222\n"
      ]
     }
    ],
