Initial bert model

--- a/classifier/bert_fake_news_classifier.ipynb
+++ b/classifier/bert_fake_news_classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,25 +116,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "class BertTweetFeedTokenizer(AbstractBertTokenizer):\n",
     "    \"\"\" BERT tokenizer which tokenizes historical tweet data as tweet feed chunks \"\"\"\n",
     "    \n",
-    "    def tokenize_input(self, X):\n",
+    "    def tokenize_input(self, X, overlap=50):\n",
     "        \"\"\" Tokenize input data \"\"\"\n",
-    "        tokenized_tweet_feeds = list(map(self._tokenize_tweet_feed, X))\n",
-    "        self.label_pattern = list(map(len, tokenized_tweet_feeds))\n",
-    "        word_ids = tf.ragged.constant(tokenized_tweet_feeds)\n",
+    "        tokenized_tweet_feeds = [\n",
+    "            self._tokenize_tweet_feed(\" \".join(tweet_feed), overlap) for tweet_feed in X\n",
+    "        ]\n",
+    "        self.label_pattern = [len(tweet_feed) for tweet_feed in tokenized_tweet_feeds]\n",
+    "        flattened_feeds = [chunk for feed in tokenized_tweet_feeds for chunk in feed]\n",
+    "        word_ids = tf.ragged.constant(flattened_feeds)\n",
     "        return self._format_bert_tokens(word_ids)\n",
     "    \n",
-    "    def _tokenize_tweet_feed(tweet_feed, overlap):\n",
+    "    def _tokenize_tweet_feed(self, tweet_feed, overlap):\n",
     "        \"\"\" Tokenize an entire tweet feed into chunks \"\"\"\n",
     "        feed_tokens = self.tokenizer.tokenize(tweet_feed)\n",
-    "        tokens = [feed_tokens[i:i+self.input_size-2] \n",
-    "                  for i in range(0, len(feed_tokens), self.input_size-overlap)]\n",
+    "        tokens = [\n",
+    "            feed_tokens[i:i+self.bert_input_size-2] \n",
+    "            for i in range(0, len(feed_tokens), self.bert_input_size-overlap)\n",
+    "        ]\n",
     "\n",
     "        return list(map(self._format_bert_word_piece_input, tokens))"
    ]
@@ -148,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
