--- a/classifier/preprocessing/parse_datasets.ipynb
+++ b/classifier/preprocessing/parse_datasets.ipynb
@@ -137,10 +137,12 @@
     "def split_dataset(tweet_data, label_data, test_size=0.15, val_size=0.15):\n",
     "    \"\"\" Takes a tweet feed dataset \"\"\"\n",
     "    tweet_train, tweet_other, label_train, label_other = train_test_split(\n",
-    "        tweet_data, label_data, test_size=(test_size + val_size)\n",
+    "        tweet_data, label_data, test_size=(test_size + val_size),\n",
+    "        random_state=0\n",
     "    )\n",
     "    tweet_val, tweet_test, label_val, label_test = train_test_split(\n",
-    "        tweet_other, label_other, test_size=(test_size / (test_size + val_size))\n",
+    "        tweet_other, label_other, test_size=(test_size / (test_size + val_size)),\n",
+    "        random_state=42\n",
     "    )\n",
     "\n",
     "    return (tweet_train, label_train, tweet_val, label_val, tweet_test, label_test)"
@@ -163,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
