Fixed data splits

--- a/classifier/evaluate_initial_bert_models.ipynb
+++ b/classifier/evaluate_initial_bert_models.ipynb
@@ -33,7 +33,7 @@
     "from official.nlp import optimization\n",
     "\n",
     "import ipynb.fs.full.parse_datasets as datasets\n",
-    "import ipynb.fs.full.preprocessing as pp\n",
+    "import ipynb.fs.full.preprocessing as processing\n",
     "import ipynb.fs.full.bert_fake_news_classifier as bclf\n",
     "from ipynb.fs.full.notif_email import send_email"
    ]
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,42 +55,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split the data\n",
+    "(tweet_train, label_train, \n",
+    " tweet_val, label_val, \n",
+    " tweet_test, label_test) = datasets.split_dataset(\n",
+    "    tweet_data, label_data, test_size=0.10, val_size=0.10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save preprocessed data\n",
+    "np.save(\n",
+    "    \"datasets/en_split_data.npy\", \n",
+    "    np.asarray([tweet_train, label_train, tweet_val, label_val, tweet_test, label_test]), \n",
+    "    allow_pickle=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_data():\n",
+    "    return np.load(\"datasets/en_split_data.npy\", allow_pickle=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Preprocess the data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Preprocess the data\n",
-    "tweet_preprocessor = pp.TweetPreprocessor(\n",
-    "    preprocess_funcs = [\n",
-    "        pp.tag_indicators,\n",
-    "        pp.replace_xml_and_html,\n",
-    "        pp.replace_emojis,\n",
-    "        pp.remove_punctuation,\n",
-    "        pp.replace_tags,\n",
-    "        pp.remove_hashtag_chars,\n",
-    "        pp.replace_accented_chars,\n",
-    "        pp.tag_numbers,\n",
-    "        pp.remove_stopwords,\n",
-    "        pp.remove_extra_spacing,\n",
-    "    ])\n",
-    "tweet_preprocessor.preprocess(tweet_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tweet_data_feed = tweet_preprocessor.get_tweet_feed_dataset()"
    ]
   },
   {
@@ -102,37 +107,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tweet_data_individual = tweet_preprocessor.get_individual_tweets_dataset()\n",
-    "\n",
-    "# Split the data\n",
-    "(tweet_train, label_train, \n",
-    " tweet_val, label_val, \n",
-    " tweet_test, label_test) = datasets.split_dataset(tweet_data_individual, label_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save preprocessed data\n",
-    "individual_data = np.asarray([tweet_train, label_train, tweet_val, label_val, tweet_test, label_test])\n",
-    "np.save(\"training/bert_data/individual_data.npy\", individual_data, allow_pickle=True)"
+    "(tweet_train, label_train, \n",
+    " tweet_val, label_val, \n",
+    " tweet_test, label_test) = load_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_individual_data():\n",
-    "    return np.load(\"training/bert_data/individual_data.npy\", allow_pickle=True)"
+    "# Preprocess the data\n",
+    "tweet_preprocessor = processing.BertTweetFeedDataPreprocessor(\n",
+    "    transformers = [\n",
+    "        processing.tag_indicators,\n",
+    "        processing.replace_xml_and_html,\n",
+    "        processing.replace_emojis,\n",
+    "        processing.remove_punctuation,\n",
+    "        processing.replace_tags,\n",
+    "        processing.remove_hashtag_chars,\n",
+    "        processing.replace_accented_chars,\n",
+    "        processing.tag_numbers,\n",
+    "        processing.remove_stopwords,\n",
+    "        processing.remove_extra_spacing,\n",
+    "    ])\n",
+    "tweet_train_processed = tweet_preprocessor.transform(tweet_train)\n",
+    "tweet_val_processed = tweet_preprocessor.transform(tweet_val)\n",
+    "tweet_test_processed = tweet_preprocessor.transform(tweet_test)"
    ]
   },
   {
@@ -152,6 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get the BERT encoder\n",
     "bert_individual_url = \"https://tfhub.dev/tensorflow/small_bert/bert_en_uncased_L-12_H-128_A-2/1\"\n",
     "bert_encoder_individual = hub.KerasLayer(\n",
     "    bert_individual_url, \n",
@@ -159,13 +166,13 @@
     ")\n",
     "bert_input_size_individual = 128\n",
     "\n",
+    "# Tokenize input\n",
     "individual_tokenizer = bclf.BertIndividualTweetTokenizer(bert_encoder_individual, bert_input_size_individual)\n",
-    "\n",
-    "tweet_individual_train = individual_tokenizer.tokenize_input(tweet_train)\n",
+    "tweet_individual_train = individual_tokenizer.tokenize_input(tweet_train_processed)\n",
     "label_individual_train = individual_tokenizer.tokenize_labels(label_train)\n",
-    "tweet_individual_val = individual_tokenizer.tokenize_input(tweet_val)\n",
+    "tweet_individual_val = individual_tokenizer.tokenize_input(tweet_val_processed)\n",
     "label_individual_val = individual_tokenizer.tokenize_labels(label_val)\n",
-    "tweet_individual_test = individual_tokenizer.tokenize_input(tweet_test)\n",
+    "tweet_individual_test = individual_tokenizer.tokenize_input(tweet_test_processed)\n",
     "label_individual_test = individual_tokenizer.tokenize_labels(label_test)"
    ]
   },
@@ -264,17 +271,6 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
     "from sklearn.metrics import classification_report"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(tweet_train, label_train, \n",
-    " tweet_val, label_val, \n",
-    " tweet_test, label_test) = load_individual_data()"
    ]
   },
   {
@@ -408,9 +404,9 @@
     "    encoder = hub.KerasLayer(url, trainable=True)\n",
     "    tokenizer = bclf.BertIndividualTweetTokenizer(encoder, bert_size)\n",
     "    \n",
-    "    tweet_individual_train = tokenizer.tokenize_input(tweet_train)\n",
+    "    tweet_individual_train = tokenizer.tokenize_input(tweet_train_processed)\n",
     "    label_individual_train = tokenizer.tokenize_labels(label_train)\n",
-    "    tweet_individual_val = tokenizer.tokenize_input(tweet_val)\n",
+    "    tweet_individual_val = tokenizer.tokenize_input(tweet_train_val)\n",
     "    label_individual_val = tokenizer.tokenize_labels(label_val)\n",
     "    \n",
     "    # Callbacks (checkpoint, tensorboard)\n",
@@ -557,11 +553,13 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Investigating BERT output classifiers\n",
+    "* Investigate using other classifiers ontop of BERT's pooled output.\n",
+    "    * Previously used a single Dense layer, now investigate using: RNN, Transformer decoder, Multilayered Perceptron"
+   ]
   },
   {
    "cell_type": "code",
