--- a/classifier/preprocessing/preprocessing.ipynb
+++ b/classifier/preprocessing/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,49 +86,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class TweetPreprocessor:\n",
-    "    def __init__(self, preprocess_funcs=None):\n",
-    "        \"\"\" Constructs a new TweetPreprocessor object, given a list of tweets. \"\"\"\n",
-    "        if preprocess_funcs is None:\n",
-    "            self.preprocess_funcs = [\n",
-    "                tag_indicators,\n",
-    "                replace_xml_and_html,\n",
-    "                replace_emojis,\n",
-    "                remove_punctuation,\n",
-    "                replace_tags,\n",
-    "                remove_hashtag_chars,\n",
-    "                replace_accented_chars,\n",
-    "                tag_numbers,\n",
-    "                remove_stopwords,\n",
-    "                remove_extra_spacing,\n",
-    "            ]\n",
-    "        else:\n",
-    "            self.preprocess_funcs = preprocess_funcs\n",
+    "class BertTweetFeedDataPreprocessor:\n",
+    "    \"\"\" Preprocesses tweet feeds to be used in the BertIndividualTweetModel \"\"\"\n",
     "\n",
-    "    def preprocess(self, X):\n",
-    "        \"\"\" Preprocess a dataset (array of arrays of Tweets)\"\"\"\n",
-    "        self.preprocessed_X = [\n",
-    "            [self._process_single_tweet(tweet.text) for tweet in tweet_feed] for tweet_feed in X\n",
-    "        ]\n",
-    "    \n",
-    "    def _process_single_tweet(self, tweet):\n",
-    "        \"\"\" Process a single tweet \"\"\"\n",
-    "        for f in self.preprocess_funcs:\n",
-    "            tweet = f(tweet)\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        transformers=[\n",
+    "            tag_indicators,\n",
+    "            replace_xml_and_html,\n",
+    "            replace_emojis,\n",
+    "            remove_punctuation,\n",
+    "            replace_tags,\n",
+    "            remove_hashtag_chars,\n",
+    "            replace_accented_chars,\n",
+    "            tag_numbers,\n",
+    "            remove_stopwords,\n",
+    "            remove_extra_spacing,\n",
+    "        ],\n",
+    "    ):\n",
+    "        self.transformers = transformers\n",
     "\n",
-    "        return tweet\n",
+    "    def transform(self, X):\n",
+    "        \"\"\" Preprocess a list of user tweets \"\"\"\n",
+    "        return np.asarray([\n",
+    "            np.asarray([self._transform_single_tweet(tweet.text) for tweet in tweet_feed])\n",
+    "            for tweet_feed in X\n",
+    "        ])\n",
     "\n",
-    "    def get_individual_tweets_dataset(self):\n",
-    "        \"\"\" Returns an array of preprocessed individual tweets \"\"\"\n",
-    "        return np.asarray(self.preprocessed_X)\n",
-    "\n",
-    "    def get_tweet_feed_dataset(self):\n",
-    "        \"\"\" Concatenates all tweets in each feed \"\"\"\n",
-    "        return np.asarray([\" \".join(tweet_feed) for tweet_feed in self.preprocessed_X])"
+    "    def _transform_single_tweet(self, tweet):\n",
+    "        \"\"\" Preprocess a single tweet \"\"\"\n",
+    "        return reduce(lambda data, transformer: transformer(data), self.transformers, tweet)\n"
    ]
   }
  ],
