--- a/classifier/preprocessing/parse_datasets.ipynb
+++ b/classifier/preprocessing/parse_datasets.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,11 +138,15 @@
     "    \"\"\" Takes a tweet feed dataset \"\"\"\n",
     "    tweet_train, tweet_other, label_train, label_other = train_test_split(\n",
     "        tweet_data, label_data, test_size=(test_size + val_size),\n",
-    "        random_state=0\n",
+    "        random_state=0,\n",
+    "        shuffle=True,\n",
+    "        stratify=label_data,\n",
     "    )\n",
     "    tweet_val, tweet_test, label_val, label_test = train_test_split(\n",
     "        tweet_other, label_other, test_size=(test_size / (test_size + val_size)),\n",
-    "        random_state=42\n",
+    "        random_state=42,\n",
+    "        shuffle=True,\n",
+    "        stratify=label_other,\n",
     "    )\n",
     "\n",
     "    return (tweet_train, label_train, tweet_val, label_val, tweet_test, label_test)"
